slideing checkbox with content

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -23,4 +23,5 @@
 @import "../components/Grid/Grid";
 @import "../styles/layout/grid";
 @import "../styles/base/utilities";
+@import "../components/SlidingCheck/Slidingcheck.scss";
 
