--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -24,4 +24,4 @@
 @import "../styles/layout/grid";
 @import "../styles/base/utilities";
 @import "../components/SlidingCheck/Slidingcheck.scss";
-
+@import "../components/Test/Test.scss";
